[package]
edition = "2021"
name = "esp32-sensor-tests"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "led_internal_blink"
path = "./src/bin/led_internal_blink.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "oled_sh1106_hello_rust"
path = "./src/bin/oled_sh1106_hello_rust.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "oled_ssd1306_hello_rust"
path = "./src/bin/oled_ssd1306_hello_rust.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32",
  "unstable",
  "rt",
  "log-04",
] }
esp-println = { version = "0.15", features = ["esp32", "log-04"] }
log = { version = "0.4" }
# env_logger = { version = "0.11" }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"

# oled display (ssd1306)
ssd1306 = { version = "0.10", features = ["async"] }
# oled display (sh1106)
oled_async = { git = "https://github.com/techmccat/sh1106.git", branch = "master" }
display-interface = { version = "0.5", features = [] }
display-interface-i2c = { version = "0.5", features = [] }
# draw text to oled display
embedded-graphics = "0.8.1"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
