[package]
edition = "2021"
name = "doktorhut_flo"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "doktorhut_flo"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false

[lib]
test = false
doctest = false
bench = false

[dependencies]
log = { version = "0.4" }
esp-println = { version = "0.15", features = ["esp32", "log-04"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32"] }
critical-section = "1.2.0"

oled_async = { git = "https://github.com/techmccat/sh1106.git", branch = "master" }
embedded-graphics = "0.8.1"
display-interface = { version = "0.5", features = [] }
display-interface-i2c = { version = "0.5", features = [] }

embassy-futures = "0.1.2"
rotary-encoder-hal = { version = "0.6.0", features = ["table-decoder"] }

embassy-sync = "0.6"
embassy-embedded-hal = "0.3.2"
static_cell = "2.1"
libm = "0.2"
edrv-mpu6050 = { git = "https://github.com/embedded-drivers/embedded-drivers.git" }
dfplayer-async = "0.5.0"
# Vendored from github.com/Nicholas-L-Johnson/flip-card (MIT), with the grid +
# particle count reduced so the Scene fits the ESP32 RAM/stack budget.
fluid_sim = { path = "vendor/fluid_sim" }
